# byte-invoice-desktop

./: .gitattributes  .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: build.yml  deploy-website.yml  lint.yml
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: clients.rs  company.rs  data.rs  data_io.rs  email.rs  invoices.rs  mod.rs  products.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: mod.rs
src/components/: StoreInitializer.tsx
src/components/invoices/: InvoiceEditor.tsx  InvoicePDF.tsx  invoice-editor.tsx
src/components/layout/: app-logo.tsx  dashboard-shell.tsx  navbar.tsx  scrollable-table.tsx
src/constants/: index.ts  locations.ts
src/emails/: EmailLayout.tsx  InvoiceEmail.tsx  OverdueEmail.tsx  ReminderEmail.tsx  email-theme.ts  index.ts
src/hooks/: useDashboardStats.ts  useInvoiceCalculations.ts
src/lib/: email-renderer.ts  store.ts  tauri-api.ts  util-shim.ts
src/pages/: clients.tsx  dashboard.tsx  index.tsx  invoice-detail.tsx  invoice-edit.tsx  invoice-new.tsx  invoices.tsx  products.tsx  settings.tsx
src/services/: emailService.tsx
src/types/: index.ts
src/utils/: calculations.ts  generators.ts  invoiceEditor.ts
website/: README.md
(+12 files in other folders)
